--- a/.gitignore
+++ b/.gitignore
@@ -5,13 +5,8 @@
 __pycache__
 db.sqlite3
 media
-
-# Visual Studio Code # 
-.vscode/* 
-!.vscode/settings.json 
-!.vscode/tasks.json 
-!.vscode/launch.json 
-!.vscode/extensions.json 
-.history
-Env
-
+/Env
+requirement.txt
+/Proj_fromagerie/dbsqlite3
+/Proj_fromagerie/manage.py
+/Proj_fromagerie/models.txt
